# VM-Builder

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  migration_test.db  pyproject.toml  vm_builder.db
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260402_0001_initial_schema.py  20260416_0002_tenant_quotas_and_vm_resources.py  20260416_0003_vm_packages.py  20260423_0004_ssh_keys.py
apps/api/app/: main.py  worker.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: admin.py  auth.py  me.py  ssh_keys.py  vms.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: migrations.py  session.py
apps/api/app/models/: domain.py
apps/api/app/providers/auth/: base.py  ldap.py  local.py
apps/api/app/providers/compute/: base.py  factory.py  mock.py  proxmox.py
apps/api/app/providers/network/: base.py
apps/api/app/schemas/: common.py  ssh_keys.py  users.py  vms.py
apps/api/app/services/: audit.py  auth.py  bootstrap.py  provisioning.py  queue.py  vm_lifecycle.py  vm_packages.py
apps/api/vm_builder_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx  types.ts
apps/web/src/components/: AppShell.tsx  (+3 more)
docs/architecture/: overview.md
docs/decisions/: 0001-auth-and-tenancy.md  0002-provisioning-model.md
docs/operations/: local-development.md  reproduce-from-github.md
infra/proxy/: Caddyfile  nginx.conf  start-proxy.sh
(+11 files in other folders)
